lab 10 with comments

--- a/travel_wishlist/templates/travel_wishlist/visited.html
+++ b/travel_wishlist/templates/travel_wishlist/visited.html
@@ -8,15 +8,18 @@
 <ul>
 
     {% for place in visited%}
-      <li>{{place.name}}</li>
-    {%endfor%}
+      <li>
+        <a href="{% url 'place_details' place.pk %}">{{ place.name }}</a>
+      
+      </li>
+    {% endfor %}
 
 </ul>
- {%else%}
+ {% else %}
 
- <p> you have not visited any places yet</p>
+ <p> You have not visited any places yet.</p>
 
- {%endif%}
+ {% endif %}
 
 
- {%endblock%}
+ {% endblock %}
