--- a/travel_wishlist/templates/travel_wishlist/wishlist.html
+++ b/travel_wishlist/templates/travel_wishlist/wishlist.html
@@ -13,18 +13,21 @@
 
 {% for place in places %}
 <div class="wishlist-place" >
+    
+    <span id="place-name-{{ place.pk }}" class="place-name">
+        <a href="{% url 'place_details' place.pk %}">{{place.name }}</a>
+    </span>
 
-   <span class="place-name-{{ place.pk }}" >{{ place.name }}</span>
-<form class="visited-form" method="POST" action="{%url 'place_was_visited' place.pk%}">
-    {% csrf_token%}
-    <button id="visited-button-{{ place.pk }}">Visited!</button>
-</form>
+    <form class="visited-form" method="POST" action="{% url 'place_was_visited' place.pk %}">
+        {% csrf_token %}
+        <button id="visited-button-{{ place.pk }}">Visited!</button>
+    </form>
 
-</div>
+    </div>
 
-{%empty%}
+{% empty %}
 
-<p ;>You have no places in your wishlist.</p>
+    <p>You have no places in your wishlist.</p>
 
 
 {% endfor %}
